debathena-printing-config (1.23.3) unstable; urgency=low

  * Don't barf on unexpected args (Trac #719)

 -- Jonathan Reed <jdreed@mit.edu>  Tue, 14 Jun 2011 15:41:41 -0400

debathena-printing-config (1.23.2) unstable; urgency=low

  * Test system and argstyle, when adding zephyr args so as not to break
    LPRng queues (Trac: #710)
  * Modify tests to account for the fact that we're now calling
    common.find_queue twice

 -- Jonathan Reed <jdreed@mit.edu>  Tue, 07 Sep 2010 11:37:41 -0400

debathena-printing-config (1.23.1) unstable; urgency=low

  * The server is named cluster-printers, not cluster-printer
  * common._setup should set the global variable cupsd (Trac: #665)

 -- Jonathan Reed <jdreed@mit.edu>  Thu, 26 Aug 2010 22:51:52 -0400

debathena-printing-config (1.23) unstable; urgency=low

  * Fix a typo in common.get_default_printer() (Trac: #665).
  * Add a missing dependency on the pkg_resources module.

 -- Geoffrey Thomas <geofft@mit.edu>  Sat, 14 Aug 2010 20:23:18 -0400

debathena-printing-config (1.22) unstable; urgency=low

  * Work around broken cups-lpq interactions between 1.4 servers and
    older clients, by falling back to LPD manually implemented if the
    arguments to lpq are trivial (Trac: #652).

 -- Geoffrey Thomas <geofft@mit.edu>  Sat, 14 Aug 2010 15:53:59 -0400

debathena-printing-config (1.21) unstable; urgency=low

  * If DEBATHENA_DEBUG is set, print the command that's about to be
    executed.

 -- Evan Broder <broder@mit.edu>  Mon, 05 Jul 2010 14:15:07 -0400

debathena-printing-config (1.20) unstable; urgency=low

  [ Jonathan Reed ]
  * Fix package name in maintainer scripts

  [ Evan Broder ]
  * Add a debathena.printing Python module for common logic:
    - Determining the print system and print server to use based on the
      name of a queue
    - Parsing and filtering arguments in common ways.
    - Actually dispatching commands between CUPS and LPRng.
  * Add a test suite for debathena.printing and run it during package