@@ -1,8 +1,10 @@
 debathena-printing-config (1.23.3) unstable; urgency=low
 
   * Don't barf on unexpected args (Trac #719)
+  * Kill LPROPT with fire (Trac: #882)
+  * That's not how you spell 'nonexistent'
 
- -- Jonathan Reed <jdreed@mit.edu>  Tue, 14 Jun 2011 15:41:41 -0400
+ -- Jonathan Reed <jdreed@mit.edu>  Tue, 14 Jun 2011 16:07:10 -0400
 
 debathena-printing-config (1.23.2) unstable; urgency=low
 
